# CppTemplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup.py
.github/workflows/: CI.yml
include/: include.hpp
tests/: test.cpp
